--- a/views/index.pug
+++ b/views/index.pug
@@ -45,6 +45,7 @@ head
         .tinta.magenta(style='background-color:magenta') 100%
     .row
       ul.list-group
+    button#rellenar0 Rellenar
   .col-sm-4#printer1
     .row
       a#imprimir1(href='#')
@@ -57,6 +58,7 @@ head
         .tinta.magenta(style='background-color:magenta') 100%
     .row
       ul.list-group
+    button#rellenar1 Rellenar
   .col-sm-4#printer2
     .row
       a#imprimir2(href='#')
@@ -69,3 +71,4 @@ head
         .tinta.magenta(style='background-color:magenta') 100%
     .row
       ul.list-group
+    button#rellenar2 Rellenar
